--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
           <div class="menu-item dropdown-link">Informatie
             <div class="dropdown-container">
               <a class="menu-item link" href="hoe-werkt-het">Hoe werkt het?</a>
-              <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
+              <a class="menu-item link" href="voor-wie">Voor wie is het?</a>
               <a class="menu-item link" href="regels.html">Regels</a>
               <a class="menu-item link" href="kosten.html">Wat kost het?</a>
             </div>
