--- a/hoe-werkt-het.html
+++ b/hoe-werkt-het.html
@@ -23,7 +23,7 @@
           <div class="menu-line three"></div>
         </div>
         <div class="logo">
-          <a href="index.html">
+          <a href="7vs7/index.html">
             <img alt="7vs7" src="7V7-logo.png">
           </a>
         </div>
