--- a/hoe-werkt-het.html
+++ b/hoe-werkt-het.html
@@ -32,7 +32,7 @@
           <a class="menu-item link" href="contact.html">Contact</a>
           <div class="menu-item dropdown-link">Informatie
             <div class="dropdown-container">
-              <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
+              <a class="menu-item link" href="7vs7/hoe-werkt-het.html">Hoe werkt het?</a>
               <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
               <a class="menu-item link" href="regels.html">Regels</a>
               <a class="menu-item link" href="kosten.html">Wat kost het?</a>
