--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="menu-line three"></div>
         </div>
         <div class="logo">
-          <a href="7vs7/index.html">
+          <a href="index.html">
             <img alt="7vs7" src="7V7-logo.png">
           </a>
         </div>
@@ -31,7 +31,7 @@
           <a class="menu-item link" href="contact.html">Contact</a>
           <div class="menu-item dropdown-link">Informatie
             <div class="dropdown-container">
-              <a class="menu-item link" href="7vs7/hoe-werkt-het.html">Hoe werkt het?</a>
+              <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
               <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
               <a class="menu-item link" href="regels.html">Regels</a>
               <a class="menu-item link" href="kosten.html">Wat kost het?</a>
