--- a/en/costs.html
+++ b/en/costs.html
@@ -26,17 +26,17 @@
           </a>
         </div>
         <div class="nav-menu">
-          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="location.html">Location</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <div class="menu-item dropdown-link">Informatie
+          <div class="menu-item dropdown-link">Information
             <div class="dropdown-container">
-              <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
-              <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
-              <a class="menu-item link" href="rules.html">Regels</a>
-              <a class="menu-item link" href="costs.html">Wat kost het?</a>
+              <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
+              <a class="menu-item link" href="for-who.html">For who is it?</a>
+              <a class="menu-item link" href="rules.html">Rules</a>
+              <a class="menu-item link" href="costs.html">What does it cost?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
+          <a class="menu-item link menu-button" href="form.html">Subscribe now!</a>
         </div>
       </div>
     </header>
@@ -56,19 +56,67 @@
           </div>
         </div>
       </div>
-    </div>
-      <div class="spacer-sm"></div>
 
+      <div class="info-wrapper">
+        <div class="row-no-color row">
+          <div class="versus-info">
+            <h2 class="list-title">What are the costs?</h2>
+            <h3 class="intro">
+              For the calculation of the prices, the assumption is that a team consists of an average of 12 people.
+              We recommend that teams be composed of 12 players or more.
+              The more players, the better.
+              Take into account cancellations and injuries that may prevent people from participating.
+              Furthermore, it is useful to have substitutes during a game.
+            </h3>
+          </div>
+        </div>
+        <div class="row-no-color row">
+          <div class="price-table">
+            <div class="table-row">
+              <div class="cell col-1"></div>
+              <div class="cell col-2">Price</div>
+            </div>
+            <div class="table-row">
+              <div class="cell col-1">Per team per season</div>
+              <div class="cell col-2">€999,99</div>
+            </div>
+            <div class="table-row">
+              <div class="cell col-1">Per person per season (Based on 12 players per team)</div>
+              <div class="cell col-2">€83,33</div>
+            </div>
+            <div class="table-row">
+              <div class="cell col-1">Per team per game</div>
+              <div class="cell col-2">€90,90</div>
+            </div>
+            <div class="table-row">
+              <div class="cell col-1">Per person per game</div>
+              <div class="cell col-2">€7,58</div>
+            </div>
+          </div>
+        </div>
+        <div class="spacer-sm"></div>
+        <div class="row">
+
+        </div>
+        <div class="spacer-sm"></div>
+        <div class="row second">
+
+        </div>
+      </div>
+
+    </div>
+
+    <div class="spacer-sm"></div>
     <footer>
       <div class="footer-container">
         <img alt="7vs7" src="../7V7-logo.png">
         <div class="footer-menu-items">
-          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="location.html">Location</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
-          <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
-          <a class="menu-item link" href="rules.html">Regels</a>
-          <a class="menu-item link" href="costs.html">Wat kost het?</a>
+          <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
+          <a class="menu-item link" href="for-who.html">For who is it?</a>
+          <a class="menu-item link" href="rules.html">Rules</a>
+          <a class="menu-item link" href="costs.html">What does it cost?</a>
         </div>
       </div>
     </footer>
