--- a/en/how-does-it-work.html
+++ b/en/how-does-it-work.html
@@ -63,8 +63,8 @@
         <div class="row-no-color row">
           <div class="versus-info">
             <h2 class="list-title">How does it work?</h2>
-            <h3 class="intro">Everyone can participate. The most important thing is that there are 7 people on the field every match (women are also allowed to participate). We recommend 10 people per team.
-              Everyone must come up with a team name with a logo (picture from the internet).
+            <h3 class="intro">Everyone can participate. The most important thing is that there are 7 people on the field every match (women are also allowed to participate). We recommend 12 people per team.
+              Everyone must come up with a team name with a logo (this can be a picture from the internet).
               The winning team earns 3 points at the end of the game. Equal is 1 point. Losing is 0 points</h3>
           </div>
         </div>
@@ -76,7 +76,7 @@
           <div class="info">
             <h3>Arrange yourself:</h3>
             <ul class="unordered-list">
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Own uniforms (All the same color shirt or something in the theme of your team name)</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Own uniforms (all the same color shirt or something in the theme of your team name)</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Soccer boots, shin guards (optional), shorts</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Own ball to warm up</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Water</li>
@@ -99,7 +99,7 @@
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Location</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Canteen where drinks can be obtained</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Changing rooms</li>
-              <li class="list-item">It can be that simple! For any questions, please send an email to info@7versus7.nl</li>
+              <li class="list-item">It can be that simple! For any questions, please send an email to<a class="mail-to" href="mailto:info@7versus7.nl" target="_blank">info@7versus7.nl</a></li>
             </ul>
           </div>
         </div>
