--- a/en/rules.html
+++ b/en/rules.html
@@ -68,7 +68,7 @@
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Each match lasts 2x 25 minutes (+ half change)</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Slides are not allowed. A sliding is only allowed when the opponent is not near the ball</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Scoring is allowed from any position</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>A back pass to the goalkeeper is penalized with an indirect free kick from the position where the ball was handled</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>When the ball is passed back to the goalkeeper and the goalkeeper handles the ball, an indirect free kick is awarded to the opposing team from the spot where the goalkeeper touched the ball with his hands</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Penalties are taken from 9 metres</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Free kicks may be taken without a whistle signal</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>A ball must be thrown in from the neck</li>
