--- a/hoe-werkt-het.html
+++ b/hoe-werkt-het.html
@@ -63,8 +63,8 @@
         <div class="row-no-color row">
           <div class="versus-info">
             <h2 class="list-title">Hoe werkt het?</h2>
-            <h3 class="intro">Iedereen mag mee doen. Het belangrijkste is dat er elke wedstrijd 7 mensen op het veld staan (ook vrouwen mogen meedoen). Wij raden per team 10 mensen aan.
-              Iedereen dient zelf een team naam te verzinnen met een logo (plaatje van het internet).
+            <h3 class="intro">Iedereen mag mee doen. Het belangrijkste is dat er elke wedstrijd 7 mensen op het veld staan (ook vrouwen mogen meedoen). Wij raden per team 12 mensen aan.
+              Iedereen dient zelf een team naam te verzinnen met een logo (dit kan gewoon een plaatje van het internet zijn).
               Het team dat wint verdient aan het eind van de wedstrijd 3 punten. Gelijk is 1 punt. Verliezen is 0 punten</h3>
           </div>
         </div>
@@ -76,11 +76,11 @@
           <div class="info">
             <h3>Zelf regelen:</h3>
             <ul class="unordered-list">
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Eigen tenues(Allemaal de zelfde kleur shirt of iets in het thema van je teamnaam)</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Voetbalschoenen, Scheenbeschermers(optioneel), broekjes</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Eigen tenues (Allemaal de zelfde kleur shirt of iets in het thema van je teamnaam)</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Voetbalschoenen, scheenbeschermers (optioneel), broekjes</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Eigen bal is altijd handig om even op te warmen</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Water</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Logo voor je teamnaam(plaatje van het internet)</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Logo voor je teamnaam (plaatje van het internet)</li>
             </ul>
           </div>
         </div>
@@ -94,12 +94,12 @@
             <ul class="unordered-list">
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Scheidsrechter</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Wedstrijdbal</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Hesjes(als teams dezelfde kleuren hebben)</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Hesjes (als teams dezelfde kleuren hebben)</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Competitie indeling</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Locatie</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Kantine waar drinken gehaald kan worden</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Kleedkamers</li>
-              <li class="list-item">Zo simpel kan het zijn! Voor eventuele vragen kan er gemaild worden naar info@7versus7.nl</li>
+              <li class="list-item">Zo simpel kan het zijn! Voor eventuele vragen kan er gemaild worden naar<a class="mail-to" href="mailto:info@7versus7.nl" target="_blank">info@7versus7.nl</a></li>
             </ul>
           </div>
         </div>
