--- a/kosten.html
+++ b/kosten.html
@@ -57,10 +57,54 @@
         </div>
       </div>
 
-      <div class="spacer-sm"></div>
+      <div class="info-wrapper">
+        <div class="row-no-color row">
+          <div class="versus-info">
+            <h2 class="list-title">Wat zijn de prijzen?</h2>
+            <h3 class="intro">
+              Voor de berekening van de prijzen is het uitgangspunt dat een team bestaat uit gemiddeld 12 personen.
+              Vanuit de organisatie raden wij aan om teams samen te stellen van 12 spelers of meer. Hierbij geldt hoe meer spelers hoe beter.
+              Houd rekening met afmeldingen en blessures waardoor mensen niet mee kunnen doen. Bovendien is het fijn om wissels te houden tijdens een wedstrijd.
+            </h3>
+          </div>
+        </div>
+        <div class="row-no-color row">
+          <div class="price-table">
+            <div class="table-row">
+              <div class="cell col-1"></div>
+              <div class="cell col-2">Prijs</div>
+            </div>
+            <div class="table-row">
+              <div class="cell col-1">Per team per seizoen</div>
+              <div class="cell col-2">€999,99</div>
+            </div>
+            <div class="table-row">
+              <div class="cell col-1">Per persoon per seizoen (uitgaande van 12 spelers per team)</div>
+              <div class="cell col-2">€83,33</div>
+            </div>
+            <div class="table-row">
+              <div class="cell col-1">Per team per wedstrijd</div>
+              <div class="cell col-2">€90,90</div>
+            </div>
+            <div class="table-row">
+              <div class="cell col-1">Per persoon per wedstrijd</div>
+              <div class="cell col-2">€7,58</div>
+            </div>
+          </div>
+        </div>
+        <div class="spacer-sm"></div>
+        <div class="row">
+
+        </div>
+        <div class="spacer-sm"></div>
+        <div class="row second">
+
+        </div>
+      </div>
 
     </div>
 
+    <div class="spacer-sm"></div>
     <footer>
       <div class="footer-container">
         <img alt="7vs7" src="7V7-logo.png">
