--- a/regels.html
+++ b/regels.html
@@ -68,7 +68,7 @@
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Elke wedstrijd duurt 2x 25minuten (+ wisselen van helft)</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Slidings zijn niet toegestaan. Een sliding is alleen toegestaan wanneer de tegenstander niet in de buurt van de bal is</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Scoren mag vanuit elke positie</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Een terugspeelbal op de keeper wordt bestraft met een indirecte vrije trap vanaf de positie waar de bal in de handen is genomen</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Wanneer de bal wordt teruggespeeld op de keeper en de keeper pakt de bal in zijn handen volgt een indirecte vrije trap vanaf de positie waar de bal in de handen is genomen</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Penalty’s worden vanaf 9 meter genomen</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Vrije trappen mogen genomen worden zonder fluitsignaal</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Een uitbal moet vanuit de nek worden ingeworpen</li>
