--- a/contact.html
+++ b/contact.html
@@ -44,10 +44,10 @@
 
     <div class="page-wrapper">
       <div class="contact-person">
-        <img class="contact-person-image" src="cas-de-wit.jpeg">
         <div class="contact-person-text">
-          Voor vragen stuur je mail naar <a class="mail-to" href="mailto:cazzdewit@7versus7.nl" target="_blank"> cazzdewit@7versus7.nl</a>
-      </div>
+          Voor vragen stuur je mail naar <a class="mail-to" href="mailto:info@7versus7.nl" target="_blank">info@7versus7.nl</a>
+        </div>
+        <img class="contact-person-image" src="7V7-logo.png">
       </div>
     </div>
     <div class="spacer-sm"></div>
