--- a/en/index.html
+++ b/en/index.html
@@ -50,7 +50,7 @@
             <div class="seven-wrapper">
               <h1 class="number">7</h1><h1 class="versus">versus</h1><h1 class="number">7</h1>
             </div>
-            <h2>The Haarlem Soccer tournament!</h2>
+            <h2>The Haarlem Soccer competition!</h2>
           </div>
           <div class="image">
             <img alt="7vs7-banner" src="../7v7-haarlem-team.png">
@@ -61,6 +61,12 @@
             <a class="en" href="index.html">EN</a>
           </div>
         </div>
+      </div>
+
+      <div class="spacer-sm desktop"></div>
+
+      <div class="intro-text-home">
+        <h3>The only 7 versus 7 soccer competition in Haarlem</h3>
       </div>
 
       <div class="spacer-sm desktop"></div>
