--- a/en/location.html
+++ b/en/location.html
@@ -46,11 +46,11 @@
 
       <div class="spacer-sm"></div>
 
-      <div class="location-thb">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24175.09560401777!2d4.60825065838448!3d52.3730039604012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5ef305c3e0f63%3A0xb6f587a06e6e4083!2sTHB%20voetbal!5e0!3m2!1snl!2snl!4v1670762796857!5m2!1snl!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="location-og">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2433.0514154139887!2d4.647373015572463!3d52.42386607979607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5efedce25ec55%3A0xf1d3fa85c2b9ad30!2sVan%20der%20Aartweg%2016%2C%202026%20ZL%20Haarlem!5e0!3m2!1sen!2snl!4v1680357072714!5m2!1sen!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="location-info">
           <h3>Address</h3>
-          <p>Wagenweg 240B, 2012 NP Haarlem</p>
+          <p>Van der Aartweg 16, 2026 ZL Haarlem</p>
         </div>
       </div>
 
