--- a/form.html
+++ b/form.html
@@ -52,7 +52,7 @@
                     <h1 class="versus">versus</h1>
                     <h1 class="number">7</h1>
                 </div>
-                <h2>Het haarlemse voetbaltoernooi!</h2>
+                <h2>De haarlemse voetbalcompetitie!</h2>
             </div>
             <div class="form-container">
                 <form action="https://app.7versus7.nl/api/aanmelden" method="POST" class="submit-form" id="versus-form">
