--- a/en/rules.html
+++ b/en/rules.html
@@ -56,6 +56,9 @@
           <div class="image">
             <img alt="7vs7-banner" src="../7v7-haarlem-player.png">
           </div>
+          <div class="image img-right">
+            <img alt="7vs7-banner" src="../7v7-haarlem-player.png">
+          </div>
         </div>
       </div>
 
