Remove all .html from hrefs

--- a/en/form.html
+++ b/en/form.html
@@ -22,22 +22,22 @@
             <div class="menu-line three"></div>
         </div>
         <div class="logo">
-            <a href="index.html">
+            <a href="index">
                 <img alt="7vs7" src="../7V7-logo.png">
             </a>
         </div>
         <div class="nav-menu">
-            <a class="menu-item link" href="location.html">Location</a>
-            <a class="menu-item link" href="contact.html">Contact</a>
+            <a class="menu-item link" href="location">Location</a>
+            <a class="menu-item link" href="contact">Contact</a>
             <div class="menu-item dropdown-link">Information
               <div class="dropdown-container">
-                <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
-                <a class="menu-item link" href="for-who.html">For who is it?</a>
-                <a class="menu-item link" href="rules.html">Rules</a>
-                <a class="menu-item link" href="costs.html">What does it cost?</a>
+                <a class="menu-item link" href="how-does-it-work">How does it work?</a>
+                <a class="menu-item link" href="for-who">For who is it?</a>
+                <a class="menu-item link" href="rules">Rules</a>
+                <a class="menu-item link" href="costs">What does it cost?</a>
               </div>
             </div>
-            <a class="menu-item link menu-button" href="form.html">Subscribe now!</a>
+            <a class="menu-item link menu-button" href="form">Subscribe now!</a>
         </div>
     </div>
 </header>
@@ -130,12 +130,12 @@
     <div class="footer-container">
         <img alt="7vs7" src="../7V7-logo.png">
         <div class="footer-menu-items">
-          <a class="menu-item link" href="location.html">Location</a>
-          <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
-          <a class="menu-item link" href="for-who.html">For who is it?</a>
-          <a class="menu-item link" href="rules.html">Rules</a>
-          <a class="menu-item link" href="costs.html">What does it cost?</a>
+          <a class="menu-item link" href="location">Location</a>
+          <a class="menu-item link" href="contact">Contact</a>
+          <a class="menu-item link" href="how-does-it-work">How does it work?</a>
+          <a class="menu-item link" href="for-who">For who is it?</a>
+          <a class="menu-item link" href="rules">Rules</a>
+          <a class="menu-item link" href="costs">What does it cost?</a>
         </div>
     </div>
 </footer>
