--- a/en/index.html
+++ b/en/index.html
@@ -22,22 +22,22 @@
           <div class="menu-line three"></div>
         </div>
         <div class="logo">
-          <a href="index.html">
+          <a href="index">
             <img alt="7vs7" src="../7V7-logo.png">
           </a>
         </div>
         <div class="nav-menu">
-          <a class="menu-item link" href="location.html">Location</a>
-          <a class="menu-item link" href="contact.html">Contact</a>
+          <a class="menu-item link" href="location">Location</a>
+          <a class="menu-item link" href="contact">Contact</a>
           <div class="menu-item dropdown-link">Information
             <div class="dropdown-container">
-              <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
-              <a class="menu-item link" href="for-who.html">For who is it?</a>
-              <a class="menu-item link" href="rules.html">Rules</a>
-              <a class="menu-item link" href="costs.html">What does it cost?</a>
+              <a class="menu-item link" href="how-does-it-work">How does it work?</a>
+              <a class="menu-item link" href="for-who">For who is it?</a>
+              <a class="menu-item link" href="rules">Rules</a>
+              <a class="menu-item link" href="costs">What does it cost?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form.html">Subscribe now!</a>
+          <a class="menu-item link menu-button" href="form">Subscribe now!</a>
         </div>
       </div>
     </header>
@@ -56,9 +56,9 @@
             <img alt="7vs7-banner" src="../7v7-haarlem-team.png">
           </div>
           <div class="lang-switch">
-            <a class="nl non-active" href="../index.html">NL</a>
+            <a class="nl non-active" href="../index">NL</a>
             |
-            <a class="en" href="index.html">EN</a>
+            <a class="en" href="index">EN</a>
           </div>
         </div>
       </div>
@@ -100,7 +100,7 @@
                 7vs7 is in fact for everyone over the age of 18. It is intended for people who do not have time to play soccer seriously at a club,
                 but still want to play a game every now and then. Moreover, it is nice for companies that are looking for activities for their staff.
               </p>
-              <a class="link" href="for-who.html">Read more</a>
+              <a class="link" href="for-who">Read more</a>
             </div>
           </div>
           <div class="card efficacy">
@@ -114,7 +114,7 @@
                 7vs7 is the soccer competition in Haarlem where we don't play 11 against 11,
                 but 7 against 7 on half a field. It's not as coercive as a real soccer club, but casual, where it's all about having fun playing soccer!
               </p>
-              <a class="link" href="how-does-it-work.html">Read more</a>
+              <a class="link" href="how-does-it-work">Read more</a>
             </div>
           </div>
           <div class="card rules">
@@ -127,7 +127,7 @@
                 The rules are simple. They resemble the rules of 'real' soccer, but suitable for 7 against 7 and aimed at keeping it fun for everyone.
                 The most important rule is therefore: Have fun!
               </p>
-              <a class="link" href="rules.html">Check here for all the rules</a>
+              <a class="link" href="rules">Check here for all the rules</a>
             </div>
           </div>
           <div class="card costs">
@@ -139,7 +139,7 @@
               <p class="card-text">
                 The costs are dependent to subscribing as a team or as an individual.
               </p>
-              <a class="link" href="costs.html">Check the price here</a>
+              <a class="link" href="costs">Check the price here</a>
             </div>
           </div>
           <div class="card subscribe">
@@ -153,7 +153,7 @@
                 You can register as a team or as an individual. Don't have a team?
                 No problem. We'll make sure you end up in a team!
               </p>
-              <a class="link" href="form.html">Subscribe here!</a>
+              <a class="link" href="form">Subscribe here!</a>
             </div>
           </div>
         </div>
@@ -182,12 +182,12 @@
       <div class="footer-container">
         <img alt="7vs7" src="../7V7-logo.png">
         <div class="footer-menu-items">
-          <a class="menu-item link" href="location.html">Location</a>
-          <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
-          <a class="menu-item link" href="for-who.html">For who is it?</a>
-          <a class="menu-item link" href="rules.html">Rules</a>
-          <a class="menu-item link" href="costs.html">What does it cost?</a>
+          <a class="menu-item link" href="location">Location</a>
+          <a class="menu-item link" href="contact">Contact</a>
+          <a class="menu-item link" href="how-does-it-work">How does it work?</a>
+          <a class="menu-item link" href="for-who">For who is it?</a>
+          <a class="menu-item link" href="rules">Rules</a>
+          <a class="menu-item link" href="costs">What does it cost?</a>
         </div>
       </div>
     </footer>
