--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
           <div class="menu-line three"></div>
         </div>
         <div class="logo">
-          <a href="index.html">
+          <a href="index">
             <img alt="7vs7" src="7V7-logo.png">
           </a>
         </div>
         <div class="nav-menu">
-          <a class="menu-item link" href="location.html">Locatie</a>
-          <a class="menu-item link" href="contact.html">Contact</a>
+          <a class="menu-item link" href="location">Locatie</a>
+          <a class="menu-item link" href="contact">Contact</a>
           <div class="menu-item dropdown-link">Informatie
             <div class="dropdown-container">
-              <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
-              <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
-              <a class="menu-item link" href="regels.html">Regels</a>
-              <a class="menu-item link" href="kosten.html">Wat kost het?</a>
+              <a class="menu-item link" href="hoe-werkt-het">Hoe werkt het?</a>
+              <a class="menu-item link" href="voor-wie">Voor wie is het?</a>
+              <a class="menu-item link" href="regels">Regels</a>
+              <a class="menu-item link" href="kosten">Wat kost het?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
+          <a class="menu-item link menu-button" href="form">Meld je nu aan!</a>
         </div>
       </div>
     </header>
@@ -56,9 +56,9 @@
             <img alt="7vs7-banner" src="7v7-haarlem-team.png">
           </div>
           <div class="lang-switch">
-            <a class="nl" href="index.html">NL</a>
+            <a class="nl" href="index">NL</a>
             |
-            <a class="en non-active" href="en/index.html">EN</a>
+            <a class="en non-active" href="en/index">EN</a>
           </div>
         </div>
       </div>
@@ -100,7 +100,7 @@
                 7vs7 is in feite voor iedereen boven de 18 jaar. Het is bedoeld voor mensen die geen tijd hebben om serieus bij een club te voetballen,
                 maar toch zo nu en dan een wedstrijd willen spelen. Bovendien is het leuk voor bedrijven die op zoek zijn naar activiteiten voor hun personeel.
               </p>
-              <a class="link" href="voor-wie.html">Lees meer</a>
+              <a class="link" href="voor-wie">Lees meer</a>
             </div>
           </div>
           <div class="card efficacy">
@@ -114,7 +114,7 @@
                 7vs7 is de voetbalcompetitie in Haarlem waarbij er niet 11 tegen 11 wordt gespeeld,
                 maar 7 tegen 7 op een half veld. Het is niet zo dwingend als een echte voetbalclub, maar ongedwongen waarbij het vooral draait om plezier in het voetballen!
               </p>
-              <a class="link" href="hoe-werkt-het.html">Lees meer</a>
+              <a class="link" href="hoe-werkt-het">Lees meer</a>
             </div>
           </div>
           <div class="card rules">
@@ -127,7 +127,7 @@
                 De regels zijn simpel. Ze lijken op de regels van het 'echte' voetbal, maar dan passend voor 7 tegen 7 en er op gericht om het voor iedereen leuk te houden.
                 De belangrijkste regel is dan ook: Heb plezier!
               </p>
-              <a class="link" href="regels.html">Bekijk hier alle regels</a>
+              <a class="link" href="regels">Bekijk hier alle regels</a>
             </div>
           </div>
           <div class="card costs">
@@ -139,7 +139,7 @@
               <p class="card-text">
                 De kosten zijn afhankelijk van het aanmelden als team of als individu.
               </p>
-              <a class="link" href="kosten.html">Check hier de prijs</a>
+              <a class="link" href="kosten">Check hier de prijs</a>
             </div>
           </div>
           <div class="card subscribe">
@@ -153,7 +153,7 @@
                 Inschrijven kan als team of als individu. Heb je geen team?
                 Geen probleem. Wij zorgen ervoor dat je in een team terechtkomt!
               </p>
-              <a class="link" href="form.html">Schrijf je hier in!</a>
+              <a class="link" href="form">Schrijf je hier in!</a>
             </div>
           </div>
         </div>
@@ -182,12 +182,12 @@
       <div class="footer-container">
         <img alt="7vs7" src="7V7-logo.png">
         <div class="footer-menu-items">
-          <a class="menu-item link" href="location.html">Locatie</a>
-          <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
-          <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
-          <a class="menu-item link" href="regels.html">Regels</a>
-          <a class="menu-item link" href="kosten.html">Wat kost het?</a>
+          <a class="menu-item link" href="location">Locatie</a>
+          <a class="menu-item link" href="contact">Contact</a>
+          <a class="menu-item link" href="hoe-werkt-het">Hoe werkt het?</a>
+          <a class="menu-item link" href="voor-wie">Voor wie is het?</a>
+          <a class="menu-item link" href="regels">Regels</a>
+          <a class="menu-item link" href="kosten">Wat kost het?</a>
         </div>
       </div>
     </footer>
