--- a/regels.html
+++ b/regels.html
@@ -23,22 +23,22 @@
           <div class="menu-line three"></div>
         </div>
         <div class="logo">
-          <a href="index.html">
+          <a href="index">
             <img alt="7vs7" src="7V7-logo.png">
           </a>
         </div>
         <div class="nav-menu">
-          <a class="menu-item link" href="location.html">Locatie</a>
-          <a class="menu-item link" href="contact.html">Contact</a>
+          <a class="menu-item link" href="location">Locatie</a>
+          <a class="menu-item link" href="contact">Contact</a>
           <div class="menu-item dropdown-link">Informatie
             <div class="dropdown-container">
-              <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
-              <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
-              <a class="menu-item link" href="regels.html">Regels</a>
-              <a class="menu-item link" href="kosten.html">Wat kost het?</a>
+              <a class="menu-item link" href="hoe-werkt-het">Hoe werkt het?</a>
+              <a class="menu-item link" href="voor-wie">Voor wie is het?</a>
+              <a class="menu-item link" href="regels">Regels</a>
+              <a class="menu-item link" href="kosten">Wat kost het?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
+          <a class="menu-item link menu-button" href="form">Meld je nu aan!</a>
         </div>
       </div>
     </header>
@@ -131,12 +131,12 @@
       <div class="footer-container">
         <img alt="7vs7" src="7V7-logo.png">
         <div class="footer-menu-items">
-          <a class="menu-item link" href="location.html">Locatie</a>
-          <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
-          <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
-          <a class="menu-item link" href="regels.html">Regels</a>
-          <a class="menu-item link" href="kosten.html">Wat kost het?</a>
+          <a class="menu-item link" href="location">Locatie</a>
+          <a class="menu-item link" href="contact">Contact</a>
+          <a class="menu-item link" href="hoe-werkt-het">Hoe werkt het?</a>
+          <a class="menu-item link" href="voor-wie">Voor wie is het?</a>
+          <a class="menu-item link" href="regels">Regels</a>
+          <a class="menu-item link" href="kosten">Wat kost het?</a>
         </div>
       </div>
     </footer>
