remove index from url

--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
             <div class="menu-line three"></div>
         </div>
         <div class="logo">
-            <a href="index">
+            <a href="https://www.7versus7.nl/">
                 <img alt="7vs7" src="7V7-logo.png">
             </a>
         </div>
