--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="menu-line three"></div>
         </div>
         <div class="logo">
-          <a href="index">
+          <a href="https://www.7versus7.nl/">
             <img alt="7vs7" src="7V7-logo.png">
           </a>
         </div>
@@ -56,9 +56,9 @@
             <img alt="7vs7-banner" src="7v7-haarlem-team.png">
           </div>
           <div class="lang-switch">
-            <a class="nl" href="index">NL</a>
+            <a class="nl" href="https://www.7versus7.nl/">NL</a>
             |
-            <a class="en non-active" href="en/index">EN</a>
+            <a class="en non-active" href="https://www.7versus7.nl/en">EN</a>
           </div>
         </div>
       </div>
