change form-page name

--- a/en/how-does-it-work.html
+++ b/en/how-does-it-work.html
@@ -38,7 +38,7 @@
               <a class="menu-item link" href="costs">What does it cost?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form">Subscribe now!</a>
+          <a class="menu-item link menu-button" href="subscribe">Subscribe now!</a>
         </div>
       </div>
     </header>
