--- a/en/index.html
+++ b/en/index.html
@@ -37,7 +37,7 @@
               <a class="menu-item link" href="costs">What does it cost?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form">Subscribe now!</a>
+          <a class="menu-item link menu-button" href="subscribe">Subscribe now!</a>
         </div>
       </div>
     </header>
@@ -153,7 +153,7 @@
                 You can register as a team or as an individual. Don't have a team?
                 No problem. We'll make sure you end up in a team!
               </p>
-              <a class="link" href="form">Subscribe here!</a>
+              <a class="link" href="subscribe">Subscribe here!</a>
             </div>
           </div>
         </div>
