--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a class="menu-item link" href="kosten">Wat kost het?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form">Meld je nu aan!</a>
+          <a class="menu-item link menu-button" href="aanmelden">Meld je nu aan!</a>
         </div>
       </div>
     </header>
@@ -153,7 +153,7 @@
                 Inschrijven kan als team of als individu. Heb je geen team?
                 Geen probleem. Wij zorgen ervoor dat je in een team terechtkomt!
               </p>
-              <a class="link" href="form">Schrijf je hier in!</a>
+              <a class="link" href="aanmelden">Schrijf je hier in!</a>
             </div>
           </div>
         </div>
