--- a/voor-wie.html
+++ b/voor-wie.html
@@ -36,7 +36,7 @@
               <a class="menu-item link" href="kosten">Wat kost het?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form">Meld je nu aan!</a>
+          <a class="menu-item link menu-button" href="aanmelden">Meld je nu aan!</a>
         </div>
       </div>
     </header>
