change price calculation

--- a/en/costs.html
+++ b/en/costs.html
@@ -62,8 +62,8 @@
           <div class="versus-info">
             <h2 class="list-title">What are the costs?</h2>
             <h3 class="intro">
-              For the calculation of the prices, the assumption is that a team consists of an average of 12 people.
-              We recommend that teams be composed of 12 players or more.
+              For the calculation of the prices, the assumption is that a team consists of an average of 11 people and plays 11 games per season (a league consists of 12 teams).
+              We recommend that teams be composed of 10 till 12 players.
               The more players, the better.
               Take into account cancellations and injuries that may prevent people from participating.
               Furthermore, it is useful to have substitutes during a game.
@@ -81,8 +81,8 @@
               <div class="cell col-2">€999,99</div>
             </div>
             <div class="table-row">
-              <div class="cell col-1">Per person per season (Based on 12 players per team)</div>
-              <div class="cell col-2">€83,33</div>
+              <div class="cell col-1">Per person per season (Based on 11 players per team)</div>
+              <div class="cell col-2">€90,90</div>
             </div>
             <div class="table-row">
               <div class="cell col-1">Per team per game</div>
@@ -90,7 +90,7 @@
             </div>
             <div class="table-row">
               <div class="cell col-1">Per person per game</div>
-              <div class="cell col-2">€7,58</div>
+              <div class="cell col-2">€8,30</div>
             </div>
           </div>
         </div>
