--- a/en/how-does-it-work.html
+++ b/en/how-does-it-work.html
@@ -63,7 +63,7 @@
         <div class="row-no-color row">
           <div class="versus-info">
             <h2 class="list-title">How does it work?</h2>
-            <h3 class="intro">Everyone can participate. The most important thing is that there are 7 people on the field every match (women are also allowed to participate). We recommend 12 people per team.
+            <h3 class="intro">Everyone can participate. The most important thing is that there are 7 people on the field every match (women are also allowed to participate). We recommend 10 till 12 people per team.
               Everyone must come up with a team name with a logo (this can be a picture from the internet).
               The winning team earns 3 points at the end of the game. Equal is 1 point. Losing is 0 points</h3>
           </div>
