--- a/hoe-werkt-het.html
+++ b/hoe-werkt-het.html
@@ -63,7 +63,7 @@
         <div class="row-no-color row">
           <div class="versus-info">
             <h2 class="list-title">Hoe werkt het?</h2>
-            <h3 class="intro">Iedereen mag mee doen. Het belangrijkste is dat er elke wedstrijd 7 mensen op het veld staan (ook vrouwen mogen meedoen). Wij raden per team 12 mensen aan.
+            <h3 class="intro">Iedereen mag mee doen. Het belangrijkste is dat er elke wedstrijd 7 mensen op het veld staan (ook vrouwen mogen meedoen). Wij raden per team 10 tot 12 mensen aan.
               Iedereen dient zelf een team naam te verzinnen met een logo (dit kan gewoon een plaatje van het internet zijn).
               Het team dat wint verdient aan het eind van de wedstrijd 3 punten. Gelijk is 1 punt. Verliezen is 0 punten</h3>
           </div>
