--- a/kosten.html
+++ b/kosten.html
@@ -62,8 +62,8 @@
           <div class="versus-info">
             <h2 class="list-title">Wat zijn de prijzen?</h2>
             <h3 class="intro">
-              Voor de berekening van de prijzen is het uitgangspunt dat een team bestaat uit gemiddeld 12 personen.
-              Vanuit de organisatie raden wij aan om teams samen te stellen van 12 spelers of meer. Hierbij geldt hoe meer spelers hoe beter.
+              Voor de berekening van de prijzen is het uitgangspunt dat een team bestaat uit gemiddeld 11 personen en 11 wedstrijden per seizoen speelt (voor een competitie van 12 teams).
+              Vanuit de organisatie raden wij aan om teams samen te stellen van 10 tot 12 spelers. Hierbij geldt hoe meer spelers hoe beter.
               Houd rekening met afmeldingen en blessures waardoor mensen niet mee kunnen doen. Bovendien is het fijn om wissels te houden tijdens een wedstrijd.
             </h3>
           </div>
@@ -79,8 +79,8 @@
               <div class="cell col-2">€999,99</div>
             </div>
             <div class="table-row">
-              <div class="cell col-1">Per persoon per seizoen (uitgaande van 12 spelers per team)</div>
-              <div class="cell col-2">€83,33</div>
+              <div class="cell col-1">Per persoon per seizoen (uitgaande van 11 spelers per team)</div>
+              <div class="cell col-2">€90,90</div>
             </div>
             <div class="table-row">
               <div class="cell col-1">Per team per wedstrijd</div>
@@ -88,7 +88,7 @@
             </div>
             <div class="table-row">
               <div class="cell col-1">Per persoon per wedstrijd</div>
-              <div class="cell col-2">€7,58</div>
+              <div class="cell col-2">€8,30</div>
             </div>
           </div>
         </div>
