--- a/aanmelden.html
+++ b/aanmelden.html
@@ -37,7 +37,7 @@
                     <a class="menu-item link" href="kosten">Wat kost het?</a>
                 </div>
             </div>
-            <a class="menu-item link menu-button" href="form">Meld je nu aan!</a>
+            <a class="menu-item link menu-button" href="aanmelden">Meld je nu aan!</a>
         </div>
     </div>
 </header>
